# image-compressor-tauri

./: .gitignore  .prettierignore  BRANDING_CHANGES.md  CLAUDE.md  GETTING_STARTED.md  LICENSE  PROGRESS.md  README.md  RELEASE.md  THUMBNAIL_IMPLEMENTATION.md  eslint.config.js  package-lock.json  package.json  playwright.config.ts  svelte.config.js  vite.config.ts
.github/workflows/: release.yml  test.yml
docs/: BRANDING_CHANGES.md  GETTING_STARTED.md  PLAN.md  PROGRESS.md  THUMBNAIL_IMPLEMENTATION.md
e2e/: example.test.ts
messages/: de.json  en.json
project.inlang/: project_id
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 0001_init.sql
src-tauri/src/: lib.rs
src-tauri/src/commands/: compress.rs  file_ops.rs  mod.rs
src-tauri/src/compression/: analyzer.rs  mod.rs  processor.rs  types.rs
src/lib/: index.ts
src/lib/components/: ActionButtons.svelte  CompressButton.svelte  CompressionSettings.svelte  FileSelector.svelte  ImageCard.svelte  ImageList.svelte  ProgressBar.svelte  ResultsSummary.svelte  app-sidebar.svelte  nav-main.svelte  nav-projects.svelte  nav-user.svelte  page-header.svelte  team-switcher.svelte  theme-toggle.svelte  topbar.svelte
src/lib/stores/: compression-state.svelte.ts
src/lib/types/: compression.ts
src/lib/utils/: format.ts  keyboard-shortcuts.ts  tauri-commands.ts  time-format.ts
src/routes/: +layout.svelte  +layout.ts  +page.svelte  +page.ts
src/routes/(app)/: +layout.svelte
(+34 files in other folders)
