[package]
name = "image-compressor"
version = "0.1.0"
description = "Professional image compression tool for bulk JPEG conversion"
authors = ["Aithericon GmbH"]
license = "MIT"
repository = "https://github.com/aithericon/image-compressor"
homepage = "https://aithericon.eu"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9", features = [] }
tauri-plugin-log = "2"
tauri-plugin-stronghold = "2.3"
tauri-plugin-dialog = "2.4"
tauri-plugin-shell = "2.3"
tauri-plugin-fs = "2.4"
image_compressor = "1.5.2"
tokio = { version = "1", features = ["full"] }
walkdir = "2.4"
image = "0.24"
base64 = "0.22"
num_cpus = "1.16"
dirs = "5.0"
uuid = { version = "1.6", features = ["v4"] }
rayon = "1.10"
